crates/parse/src/tests/snapshots/binop_bad_4.snap
---
source: crates/parse/src/tests.rs
expression: "(test[1], ast, ast_string)"
---
- (19 + 21
- Err:
    - message: "Expecting `)` to close paren expression. Got `EOF`"
      line: 0
      column: 0
- "Expecting `)` to close paren expression. Got `EOF`"

