crates/parse/src/tests/snapshots/binop_empty_paren.snap
---
source: crates/parse/src/tests.rs
expression: "(test[1], ast, ast_string)"
---
- ()
- Err:
    - message: "Expecting primary expression. Got `CloseParen`"
      line: 1
      column: 2
- "Expecting primary expression. Got `CloseParen` at 1:2"

