crates/parse/src/tests/snapshots/binop_multi.snap
---
source: crates/parse/src/tests.rs
assertion_line: 47
expression: "(test[1], ast, ast_string)"
---
- 19 ** 21 ** 40; 19 - 21 * 20 + 40
- Ok:
    nodes:
      - kind:
          BinOp:
            op: Pow
            lhs:
              kind:
                Lit:
                  value:
                    UInt64: 19
                  ty: ~
            rhs:
              kind:
                BinOp:
                  op: Pow
                  lhs:
                    kind:
                      Lit:
                        value:
                          UInt64: 21
                        ty: ~
                  rhs:
                    kind:
                      Lit:
                        value:
                          UInt64: 40
                        ty: ~
                  ty: ~
            ty: ~
      - kind:
          BinOp:
            op: Add
            lhs:
              kind:
                BinOp:
                  op: Sub
                  lhs:
                    kind:
                      Lit:
                        value:
                          UInt64: 19
                        ty: ~
                  rhs:
                    kind:
                      BinOp:
                        op: Mul
                        lhs:
                          kind:
                            Lit:
                              value:
                                UInt64: 21
                              ty: ~
                        rhs:
                          kind:
                            Lit:
                              value:
                                UInt64: 20
                              ty: ~
                        ty: ~
                  ty: ~
            rhs:
              kind:
                Lit:
                  value:
                    UInt64: 40
                  ty: ~
            ty: ~
- (** 19 (** 21 40))(+ (- 19 (* 21 20)) 40)

