crates/parse/src/tests/snapshots/binop_single.snap
---
source: crates/parse/src/tests.rs
assertion_line: 47
expression: "(test[1], ast, ast_string)"
---
- "19"
- Ok:
    nodes:
      - kind:
          Lit:
            value:
              UInt64: 19
            ty: ~
- "19"

