crates/parse/src/tests/snapshots/block_missing.snap
---
source: crates/parse/src/tests.rs
assertion_line: 60
expression: "(test[1], ast, ast_string)"
---
- if foo
- Err:
    message: "Expecting `{` to start block. Got `EOF`"
    line: 0
    column: 0
- "Expecting `{` to start block. Got `EOF`"

