crates/parse/src/tests/snapshots/call_bad_2.snap
---
source: crates/parse/src/tests.rs
assertion_line: 75
expression: "(test[1], ast, ast_string)"
---
- a(a
- Err:
    message: "Expecting `,` or `CloseParen` in function call argument list. Got `a`"
    line: 1
    column: 3
- "Expecting `,` or `CloseParen` in function call argument list. Got `a` at 1:3"

